Fix component spacing

--- a/Site/src/app/conglomerate/conglomerate.component.css
+++ b/Site/src/app/conglomerate/conglomerate.component.css
@@ -1,5 +1,5 @@
 .Com {
-  flex-basis: 45%;
+  flex-basis: 48%;
   border: solid black 1px;
   margin: 5px;
 }
