--- a/Site/src/app/game/game.component.css
+++ b/Site/src/app/game/game.component.css
@@ -1,5 +1,5 @@
 .Con {
-  flex-basis: 45%;
+  flex-basis: 48%;
   border: solid black 1px;
   margin: 5px;
 }
